# argentina-hub

./: .env.example  .gitignore  README.md  SOURCE_OF_TRUTH.md  agents.md  censo_extractor.py  index.html  makefile  patino_mapa.html  pyproject.toml  requirements.txt  validation.py
docs/datasets/: censo.md  consultas_ambulatorias.md  dpa.md  indicadores.md  timeseries.md
scripts/: descargar_consultas_ambulatorias.py  descargar_dengue.py  descargar_refes.py  generar_datos_sinteticos.py  verify_pipeline.py
src/: build_dev_db.py  validation.py
src/argentina_hub/: __init__.py  cli.py  core.py
src/extractors/: arsenico_extractor.py  base.py  censo_extractor.py  dpa_extractor.py  geometrias_extractor.py  google_sheets_extractor.py  indicadores_extractor.py  localidades_extractor.py  timeseries_extractor.py  universidades_extractor.py
test/: establecimientos_patino.json  features_formosa.json  test_argentina_hub.py  test_pipeline_logic.py
